// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should not render <Observer /> render outside view 1`] = `
<div
  className="observer"
/>
`;

exports[`Should render <Observer /> render when in view 1`] = `
<div
  className="observer"
>
  <div>
    Render method
  </div>
</div>
`;

exports[`Should render <Observer /> with children inview 1`] = `
<div
  className="observer"
>
  <div>
    Content
  </div>
</div>
`;

exports[`Should render <Observer /> with children outside view 1`] = `
<div
  className="observer"
>
  <div>
    Content
  </div>
</div>
`;
